name:                nm-agent
version:             0.1.0.0
synopsis:            A NetworkManager secret agent for accessing gnome keyring.
description:         Please see README.md
author:              Luke Taylor
maintainer:          tekul.hs@gmail.com
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable nm-agent
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , dbus
                     , gnome-keyring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tekul/nm-agent
